# kaldi-gop

./: .gitignore  README.md  build.sh
depends/: kaldi-makefile.patch
egs/gop-compute/: path.sh  run.sh
egs/gop-compute/local/: compute-gmm-gop.sh
src/: CMakeLists.txt
src/gop/: gmm-gop.cc  gmm-gop.h
src/gopbin/: compute-gmm-gop.cc
utils/: clang-format.sh
